2019-1/230/users/4027/executions/1762_2390.log
== TEST (2019-05-23 22:48:06) 
-- CODE:
p = array(eval(input("Presentes no mes: ")))
f = array(eval(input("Faltantes no mes: ")))
vet = zeros(12)
i = 0
while(i < 12):
	vet[i] = p[i] - f[1]
	i = i + 1
j = 0
while(j < 12):
	if(max(vet) == vet[j]):
		print(j)
	j = j + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:48:14) 
-- CODE:
p = array(eval(input("Presentes no mes: ")))
f = array(eval(input("Faltantes no mes: ")))
vet = zeros(12)
i = 0
while(i < 12):
	vet[i] = p[i] - f[1]
	i = i + 1
j = 0
while(j < 12):
	if(max(vet) == vet[j]):
		print(j)
	j = j + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:48:46) 
-- CODE:
from  numpy import *
p = array(eval(input("Presentes no mes: ")))
f = array(eval(input("Faltantes no mes: ")))
vet = zeros(12)
i = 0
while(i < 12):
	vet[i] = p[i] - f[1]
	i = i + 1
j = 0
while(j < 12):
	if(max(vet) == vet[j]):
		print(j)
	j = j + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:49:24) 
-- CODE:
from  numpy import *
p = array(eval(input("Presentes no mes: ")))
f = array(eval(input("Faltantes no mes: ")))
vet = zeros(12)
i = 0
while(i < 12):
	vet[i] = p[i] - f[1]
	i = i + 1
j = 0
while(j < 12):
	if(max(vet) == vet[j]):
		print(j + 1)
	j = j + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 22:49:30) 
-- CODE:
from  numpy import *
p = array(eval(input("Presentes no mes: ")))
f = array(eval(input("Faltantes no mes: ")))
vet = zeros(12)
i = 0
while(i < 12):
	vet[i] = p[i] - f[1]
	i = i + 1
j = 0
while(j < 12):
	if(max(vet) == vet[j]):
		print(j + 1)
	j = j + 1
-- EXECUTION TIME:
0.594433
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
